# Perfect_Model

Common_Model/: CMakeLists.txt  getFile.cc  gitignore.txt  toc.h
Image_synchronize/: frame_synchronize_test.cc  frame_synchronizer.cc  frame_synchronizer.h  readme.md  time_sync_pair.h  vision_odometry.cc  vision_odometry.h
Thread/ConcurrentSafeThread_std_thread/: readme.md  safe_queue.h
Thread/ThreadSafeQueue_pthread/: README.md  ThreadModel.cpp  ThreadsafeQueue.hpp
